test_next-20170816/20170815223034/build/build_20170815223034_log.txt
test_build: Tue Aug 15 22:33:48 PDT 2017: started on defconfig test_next-20170816 (5d51332f20b270812376cf8751987e283f30de4a)
test_build: Tue Aug 15 22:33:48 PDT 2017: serial is 20170815223034
arch/arm64/Makefile:23: ld does not support --fix-cortex-a53-843419; kernel may be susceptible to erratum
arch/arm64/Makefile:44: Detected assembler with broken .inst; disassembly will be unreliable
drivers/acpi/spcr.c: In function ‘parse_spcr’:
drivers/acpi/spcr.c:165:3: error: label ‘done’ used but not defined
   goto done;
   ^
drivers/acpi/spcr.c: At top level:
drivers/acpi/spcr.c:201:4: error: expected identifier or ‘(’ before ‘else’
  } else {
    ^
In file included from ./include/linux/printk.h:6:0,
                 from ./include/linux/kernel.h:13,
                 from ./include/linux/list.h:8,
                 from ./include/linux/resource_ext.h:17,
                 from ./include/linux/acpi.h:26,
                 from drivers/acpi/spcr.c:14:
./include/linux/kern_levels.h:4:18: error: expected declaration specifiers or ‘...’ before string constant
 #define KERN_SOH "\001"  /* ASCII Start Of Header */
                  ^
./include/linux/kern_levels.h:13:19: note: in expansion of macro ‘KERN_SOH’
 #define KERN_INFO KERN_SOH "6" /* informational */
                   ^
./include/linux/printk.h:308:9: note: in expansion of macro ‘KERN_INFO’
  printk(KERN_INFO pr_fmt(fmt), ##__VA_ARGS__)
         ^
drivers/acpi/spcr.c:206:2: note: in expansion of macro ‘pr_info’
  pr_info("console: %s\n", opts);
  ^
In file included from ./include/linux/kernel.h:13:0,
                 from ./include/linux/list.h:8,
                 from ./include/linux/resource_ext.h:17,
                 from ./include/linux/acpi.h:26,
                 from drivers/acpi/spcr.c:14:
drivers/acpi/spcr.c:206:27: error: unknown type name ‘opts’
  pr_info("console: %s\n", opts);
                           ^
./include/linux/printk.h:308:34: note: in definition of macro ‘pr_info’
  printk(KERN_INFO pr_fmt(fmt), ##__VA_ARGS__)
                                  ^
drivers/acpi/spcr.c:208:2: error: expected identifier or ‘(’ before ‘if’
  if (earlycon)
  ^
drivers/acpi/spcr.c:211:2: warning: data definition has no type or storage class
  err = add_preferred_console(uart, 0, opts + strlen(uart) + 1);
  ^
drivers/acpi/spcr.c:211:2: error: type defaults to ‘int’ in declaration of ‘err’ [-Werror=implicit-int]
drivers/acpi/spcr.c:211:30: error: ‘uart’ undeclared here (not in a function)
  err = add_preferred_console(uart, 0, opts + strlen(uart) + 1);
                              ^
drivers/acpi/spcr.c:211:39: error: ‘opts’ undeclared here (not in a function)
  err = add_preferred_console(uart, 0, opts + strlen(uart) + 1);
                                       ^
drivers/acpi/spcr.c:213:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
 done:
     ^
drivers/acpi/spcr.c:215:2: error: expected identifier or ‘(’ before ‘return’
  return err;
  ^
drivers/acpi/spcr.c:216:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
drivers/acpi/spcr.c: In function ‘parse_spcr’:
drivers/acpi/spcr.c:201:2: warning: control reaches end of non-void function [-Wreturn-type]
  } else {
  ^
cc1: some warnings being treated as errors
make[2]: *** [drivers/acpi/spcr.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [drivers/acpi] Error 2
make: *** [drivers] Error 2
make: *** Waiting for unfinished jobs....
test_build: Tue Aug 15 22:36:34 PDT 2017: FAILED on defconfig test_next-20170816
test_build: Tue Aug 15 22:36:34 PDT 2017: ended on defconfig test_next-20170816
